image readablity fix added

--- a/_sass/default.scss
+++ b/_sass/default.scss
@@ -128,6 +128,16 @@ a:hover {
   z-index: -1
 }
 
+.nonoutput {
+  background-color: $console-bg;
+  overflow: scroll;
+  position: absolute;
+  padding: 3rem 2rem;
+  pointer-events: auto;
+  text-shadow: 0rem 0.2rem 1rem lighten($console-bg,20%);
+  z-index: -1
+}
+
 @keyframes crt-output {
   0% { opacity: 0.9; }
   50% { opacity: 1; }
